--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,20 @@ description: > # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: alexmera
+github_username:  alexmera
 
 # Build settings
 markdown: kramdown
+
+# Asciidoctor
+asciidoc_ext: asciidoc,adoc,ad
+
+asciidoctor:
+  attributes:
+    - hardbreaks!
+    - source-highlighter=pygments
+    - pygments-css=style
 
 #Exclude
 exclude: [README.markdown, package.json, grunt.js, Gruntfile.js, Gruntfile.coffee, node_modules]
