--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Alexander Mera - Blog sobre desarrollo de software java, scala, progfun
+title: Alexander Mera - Blog sobre desarrollo de software Java, Scala, Programación Funcional
 email: alxmera@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Guías, explicaciones, ejemplos y opiniones relacionados con el
   desarrollo de software: java, spring framework, programación funcional y scala
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "http://blog.alexmera.com" # the base hostname & protocol for your site
 twitter_username: alexmera
 github_username:  alexmera
 
